# riff-raff

./: .gitignore  README.md  TESTING.md  generator_core.py  midi_generator.py  pyproject.toml  requirements.txt  start.sh  streamlit.toml  streamlit_app.py
data/: saved_lyrics.json
src/: utils.py
src/lyrics/: generator.py  utils.py
src/personas/: vocab_loader.py
tests/: __init__.py  conftest.py  test_generator.py  test_generator_core.py  test_lyrics_utils.py  test_midi_generator.py  test_personas.py  test_utils.py  test_vault_manager.py
